--- a/client/package.json
+++ b/client/package.json
@@ -1,33 +1,41 @@
 {
-  "name": "client",
+  "name": "url-shortener-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "host": "vite --host"
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@tanstack/react-query": "^5.59.0",
+    "@nextui-org/react": "^2.4.8",
+    "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.1",
-    "moment": "^2.30.1",
+    "framer-motion": "^11.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11",
+    "@eslint/js": "^9.11.1",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
   }
 }
