--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.8",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "zustand": "^5.0.0-rc.2"
