--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.8",
+    "@heroui/react": "2.7.6",
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -40,6 +40,6 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^6.2.6"
   }
 }
