--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.27.0",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
