--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,11 @@
     ],
     "routes": [
         {
-            "src": "/.*",
+            "src": "/(.*)",
             "dest": "server/server.js"
         }
     ],
     "env": {
         "NODE_ENV": "production"
-    },
-    "preinstall": "cd client && npm install",
-    "install": "cd server && npm install",
-    "prebuild": "cd client && npm run build"
+    }
 }
